	  new functions do_para_operation(), do_para_begin(), and
	  do_para_end().  Note that the last three functions are
	  disabled if justification is disabled. (DLR)
	- Make sure the "historylog" option isn't included at all if
	  NANO_SMALL is defined. (DLR)
	- Source reorganization: move code to src/, docs to doc/. (Jordi)
	- Translation updates (see po/ChangeLog for details).
- files.c:
  do_browser()
	- Some of the Pico compatibility options in the file browser
	  that don't work properly for current Pico have been removed.
	  Backspace, 'g', 'l', 'q', and 'u' are invalid.  'd' deletes
	  the highlighted file, and 'r' renames the highlighted file;
	  neither of these are implemented. (DLR)
- global.c:
  toggle_init()
	- Change the message for the line wrapping toggle from "Auto
	  wrap" to "Auto line wrap", to more clearly associate it with
	  Meta-L. (DLR)
  shortcut_init()
	- Change multibuffer-enabled references to
	  opening/closing/toggling the previous/next loaded file to
	  toggling/switching to/closing the previous/next file buffer,
	  for consistency with other references. (DLR)
- nano.c:
  window_init()
	- Set keypad() to TRUE regardless of whether PDCurses is being
	  used, as Meta-X apparently turns it off even under ncurses.
	  (DLR)
  do_backspace()
	- Vastly simplify, and remove dependency on page_up(). (David
	  Benbennick)
  help_init()
	- Document the support for Esc Esc [character]'s being
	  interpreted as Ctrl-[character], and the support for Pico's
	  Esc Esc [three-digit decimal ASCII code] input method. (DLR)
- nano.h:
	- Define KEY_RESIZE and KEY_SUSPEND as -1 when slang is used, as
	  slang has no equivalent of either.  When nano is compiled with
	  slang support, resizing the window doesn't generate
	  KEY_RESIZE, and pressing Ctrl-Z to suspend nano at the Linux
	  console with keypad(TRUE) generates Ctrl-Z instead of
	  KEY_SUSPEND, both unlike ncurses. (DLR)
- move.c:
	- Remove unneeded inclusion of stdio.h, make various cleanups,